# rmao10

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: update_submodule.yml
05/: krewes.py
06_05-rf/: work05_redone.py
07_py-csv/: K07.py  K07_v1.py  notes.md
08_betterpy/: absorb.txt  virtualdisco.txt
09_flask00/: bigbrain.txt
10_flask01/: app.py  occupations.py
10_flask01/templates/: index.html
