[tool.poetry]
name = "soft_dev"
version = "0.1.0"
description = "Project for stuy soft dev 2020-2021"
authors = ["ruoshui-git <ruoshuim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
